--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-SERVER_ID=
-DISCORD_TOKEN=
+SERVER_ID=459686117101273101
+DISCORD_TOKEN=ODI5NjY4ODM5MTEyNzA0MDUx.YaBquQ.gIuvxLJ1J2qW_AcrvpyQN3kRTgs
+
